--- a/topic/topic.html
+++ b/topic/topic.html
@@ -11,7 +11,7 @@
 
 <main>
 <h2>ОПИС БІЗНЕС-ЛОГІКИ:</h2>
-    <p>Веб застосунок, що надає користувачам можливість переглядати асортимент магазину, отримувати інформацію щодо товару та самого магазину, додавати товар в кошик. <br> На головній сторінці клієнт дізнається детально про концепцію магазину, дізнається контактні дані та може безпосередньо перейти до вибору товарів.<br> Сайт має декілька додаткових вебсторінок, таких як: товари за категоріями, оформлення замовлення, інформація про розташування магазину. </p>
+Мета: пришвидшити та покращити процес купівлі товарів.<br>Сценарій адміністратор:додавати та редагувати вміст каталогу. Сценарій клієнт: Веб застосунок, що надає користувачам можливість переглядати асортимент магазину, отримувати інформацію щодо товару та самого магазину, додавати товар в кошик. На головній сторінці клієнт дізнається детально про концепцію магазину, дізнається контактні дані та може безпосередньо перейти до вибору товарів.Сайт має декілька додаткових вебсторінок, таких як: товари за категоріями, оформлення замовлення, інформація про розташування магазину і тд. </p>
 </main>
 
 <footer>
